[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Themes/ThemeDefault.tres" type="Theme" id=1]
[ext_resource path="res://Assets/UI/Slider/Slider.gd" type="Script" id=2]
[ext_resource path="res://Assets/Materials/light.tres" type="Material" id=3]

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 1

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.756863, 0.329412, 0.447059, 0.164706 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.756863, 0.329412, 0.447059, 0.678431 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0.580392 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0, 0, 0, 0.105882 )
shadow_size = 98

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.756863, 0.329412, 0.447059, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color( 0.027451, 0.0392157, 0.0862745, 0.152941 )
shadow_size = 14

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0.423529, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 1, 0.635294, 0.368627, 0.313726 )
shadow_size = 30

[sub_resource type="CanvasItemMaterial" id=4]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.533333 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 1, 0.596078, 0, 0.211765 )

[node name="Slider" type="Panel"]
material = SubResource( 6 )
anchor_left = -1.0
anchor_top = -1.0
margin_top = -8.0
margin_bottom = -8.0
rect_scale = Vector2( 1, 1.00892 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Track" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -5.0
margin_top = 50.0
margin_right = 2.0
margin_bottom = -50.0
rect_min_size = Vector2( 10, 0 )
rect_scale = Vector2( 0.988539, 1.00246 )
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 7 )

[node name="Knob" type="Panel" parent="."]
anchor_right = 1.0
rect_min_size = Vector2( 0, 150 )
rect_scale = Vector2( 0.996585, 1.01567 )
mouse_filter = 1
size_flags_vertical = 0
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 2 )

[node name="GripLight" type="Panel" parent="Knob"]
modulate = Color( 1, 1, 1, 0 )
material = ExtResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 70.0
margin_right = -30.0
margin_bottom = -70.0
mouse_filter = 1
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 5 )

[node name="GripHole" type="Panel" parent="Knob"]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 70.0
margin_right = -30.0
margin_bottom = -70.0
mouse_filter = 1
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 3 )

[connection signal="gui_input" from="." to="." method="_on_Slider_gui_input"]
